# tsxt-assignment-solutions

./: LICENSE  README.md
advanced-programming/RaspberryPi-Vehicle/: README.md  配件单.txt
advanced-programming/dev4one-fsoo/: .gitignore  CMakeLists.txt  README.md
advanced-programming/dev4one-fsoo/docs/: docs.md
advanced-programming/dev4one-fsoo/src/: CMakeLists.txt  main.cpp  util.h
advanced-programming/dev4one-fsoo/src/dlib_sycl/: image_transforms.h
advanced-programming/dev4one-fsoo/src/dlib_sycl/image_processing/: frontal_face_detector.h  object_detector.h  scan_fhog_pyramid.h
advanced-programming/dev4one-fsoo/src/dlib_sycl/image_transforms/: fhog.h
advanced-programming/dev4one-fsoo/src/sycl/: image_processing.h  onevpl_video_process.h  sycl_handler.h
compiler-principles/: .gitignore  zip.sh  于斐_202200130119_实验报告.docx
compiler-principles/ex1/: Makefile
compiler-principles/ex2/: Makefile
compiler-principles/ex3/: Makefile
computer-graphics/ex1-3/: .gitattributes  .gitignore  CMakeLists.txt  README.md
computer-graphics/ex1-3/assets/: config.yml
computer-graphics/ex1-3/assets/shaders/depth/: object.frag
computer-graphics/ex1-3/assets/shaders/normal/: object.frag  object.vert
computer-graphics/ex1-3/assets/shaders/rasterization/: axis.frag  lighting.frag  object.frag  object.vert
computer-graphics/ex1-3/assets/shaders/ray_tracing/: final.frag  final.vert  trace.comp
computer-graphics/ex1-3/include/glad/: glad.h
computer-graphics/ex1-3/report/: 202200130119_于斐_实验1_学堂计机22.docx  202200130119_于斐_实验2_学堂计机22.docx  202200130119_于斐_实验3_学堂计机22.docx  README.md
computer-graphics/ex1-3/src/: implementations.cpp  main.cpp
computer-graphics/ex1-3/src/animation/: animation.cpp  animation.h
computer-graphics/ex1-3/src/compute_shader/: compute_shader.cpp  compute_shader.h
computer-graphics/ex1-3/src/gui/: gui.cpp  gui.h
computer-graphics/ex1-3/src/objects/: mesh.cpp  model.cpp  objects.h  texture.cpp
computer-graphics/ex1-3/src/ray_tracer/: bvh.cpp  mesh.cpp  ray_tracer.cpp  ray_tracer.h  scene.cpp
computer-graphics/ex1-3/src/renderer/: camera.cpp  functional.cpp  lighting.cpp  renderer.cpp  renderer.h  shader.cpp
computer-graphics/ex1-3/src/utils/: config.cpp  parser.h  yamlLoader.h
computer-graphics/ex4/: .gitignore  README.md  data  test0.py  test1.py  train.sh
machine-learning/ex1/: main.ipynb  report.md
machine-learning/ex2/: main.ipynb  report.md
machine-learning/ex3/: main.ipynb  report.md
machine-learning/ex4/: main.ipynb  map_feature.py  report.md
machine-learning/ex5/: main.ipynb  report.md
machine-learning/ex6/: Fei-Yu-result.txt  main.py  report.md
machine-learning/ex7/: main.ipynb  report.md
machine-learning/final/: main.ipynb
mit61810/: Makefile
mit61810/[please-rename-this-folder-to-.git]/: config  index  packed-refs
mit61810/user/: find.c  pingpong.c  primes.c  sleep.c  xargs.c
numerical-analysis/: README.md
numerical-analysis/experiment/: experiment.md
(+156 files in other folders)
